# downloader-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: download.rs  main.rs  state.rs  tui.rs
