[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["socks"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
crossterm = "0.28"
futures = "0.3"
ratatui = "0.29"
crossbeam-channel = "0.5"
